--- a/TODO
+++ b/TODO
@@ -2,5 +2,5 @@
 
 * longer term: TikTok support
 * fix entries with no publishedParsed date
-* get old posts on initial sync
 * fix images in Twitter posts
+* fix doubled text in title + description
