--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 # mucho mucho
 
-* longer term: TikTok support
 * fix entries with no publishedParsed date
 * fix images in Twitter posts
 * fix doubled text in title + description
+* fix inline links
+* add containments 
+* NIP-48 support
